--- a/Cozmo-Project/documentation.html
+++ b/Cozmo-Project/documentation.html
@@ -9,8 +9,8 @@
 <body>
     <div class="topnav">
         <a class="active" href="cozmoprojectpage.html">Home</a>
-        <a href="#">Documentation</a>
-        <a href="goals.html">Goals</a>
+        <a href="documentation.html">Documentation</a>
+        <a href="cozmoprojectpage.html#goals">Goals</a>
         <a href="#">Source Code</a>
       </div> 
     <br />
