Update and rename cozmoprojectpage.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="topnav">
-        <a class="active" href="cozmoprojectpage.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="#documentation">Documentation</a>
         <a href="#goals">Goals</a>
         <a href="https://github.com" target="_blank">Source Code</a>
