--- a/documentation.html
+++ b/documentation.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anki Cozmo</title>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="cozmoprojectpage.html">Home</a>
-        <a href="documentation.html">Documentation</a>
-        <a href="cozmoprojectpage.html#goals">Goals</a>
+        <a  href="index.html">Home</a>
+        <a  href="documentation.html">Documentation</a>
+        <a  href="goals.html">Goals</a>
         <a href="#">Source Code</a>
-      </div> 
+    </div> 
     <br />
-    
+
+    <div id="documentation" style="text-align: center;">
+        <h3 style="text-align: center; top: 100%; text-decoration: underline;">Materials Needed</h3>
+        <div class="centered-list-container">
+            <ul class="centered-list">
+                <li>1x Anki Cozmo Robot</li>
+                <li>1x Android Phone</li>
+                <li>1x Computer with software below</li>
+                <li>1x Micro USB or USB C cable to connect to the computer</li>
+            </ul>
+        </div>
+    </div>
    
 </body>
 </html>
