--- a/documentation.html
+++ b/documentation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anki Cozmo</title>
 </head>
-<body>
+<body id="net">
     <div class="topnav">
         <a  href="index.html">Home</a>
         <a  href="documentation.html">Documentation</a>
@@ -26,6 +26,21 @@
             </ul>
         </div>
     </div>
-   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script>
+    VANTA.NET({
+      el: "#net",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0xff3b6, // Example: change the primary color (use hexadecimal values)
+      backgroundColor: 0x0B0C10
+    })
+    </script>
 </body>
 </html>
