--- a/goals.html
+++ b/goals.html
@@ -13,7 +13,7 @@
         <a  href="goals.html">Goals</a>
         <a href="#">Source Code</a>
     </div> 
-    <div id="goals"  style="text-align: center;">
+    <div id="goals">
        
         <h3 style="text-align: center; text-decoration: underline;">Introduction: </h3>
     
