--- a/documentation.html
+++ b/documentation.html
@@ -11,7 +11,7 @@
         <a  href="index.html">Home</a>
         <a  href="documentation.html">Documentation</a>
         <a  href="goals.html">Goals</a>
-        <a href="#">Source Code</a>
+        <a href="https://github.com/TerrelVerneuil/CozmoProject">Source Code</a>
     </div> 
     <br />
 
@@ -24,8 +24,10 @@
                 <li>1x Computer with software below</li>
                 <li>1x Micro USB or USB C cable to connect to the computer</li>
             </ul>
+            
         </div>
     </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <script>
