--- a/goals.html
+++ b/goals.html
@@ -11,11 +11,11 @@
         <a  href="index.html">Home</a>
         <a  href="documentation.html">Documentation</a>
         <a  href="goals.html">Goals</a>
-        <a href="#">Source Code</a>
+        <a href="https://github.com/TerrelVerneuil/CozmoProject">Source Code</a>
     </div> 
     <div id="goals">
        
-        <h3 style="text-align: center; text-decoration: underline;">Introduction: </h3>
+        <h3 style="text-align: center; text-decoration: underline; color: black; background-color: #66FCF1;">Introduction: </h3>
     
     <div class="centered-text-container">
         <div class="centered-text">
@@ -29,7 +29,7 @@
         margin-left: auto;
         margin-right: auto;
         "> 
-        <h3 style="text-align: center; text-decoration: underline;">Project Goals</h3>
+        <h3 style="text-align: center; text-decoration: underline; color: black; background-color: #66FCF1;">Project Goals</h3>
         <div class="centered-list-container">
             <ul class="centered-list">
                 <li>Understand previous implementations of the project.</li>
