--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="documentation.html">Documentation</a>
         <a href="goals.html">Goals</a>
-        <a href="https://github.com" target="_blank">Source Code</a>
+        <a href="https://github.com/TerrelVerneuil/CozmoProject" target="_blank">Source Code</a>
       </div> 
     <br />
     <div class="bodytext">
