--- a/documentation.html
+++ b/documentation.html
@@ -16,7 +16,7 @@
     <br />
 
     <div id="documentation" style="text-align: center;">
-        <h3 style="text-align: center; top: 100%; text-decoration: underline;">Materials Needed</h3>
+        <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Materials Needed</h3>
         <div class="centered-list-container">
             <ul class="centered-list">
                 <li>1x Anki Cozmo Robot</li>
