--- a/goals.html
+++ b/goals.html
@@ -11,7 +11,7 @@
         <a  href="index.html">Home</a>
         <a  href="documentation.html">Documentation</a>
         <a  href="goals.html">Goals</a>
-        <a href="https://github.com/TerrelVerneuil/CozmoProject">Source Code</a>
+        <a href="https://github.com/TerrelVerneuil/CozmoProject" target="_blank">Source Code</a>
     </div> 
     <div id="goals">
        
