--- a/documentation.html
+++ b/documentation.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anki Cozmo</title>
 </head>
+
 <body id="net">
     <div class="topnav">
-        <a  href="index.html">Home</a>
-        <a  href="documentation.html">Documentation</a>
-        <a  href="goals.html">Goals</a>
-        <a href="https://github.com/TerrelVerneuil/CozmoProject">Source Code</a>
-    </div> 
+        <a href="index.html">Home</a>
+        <a href="documentation.html">Documentation</a>
+        <a href="goals.html">Goals</a>
+        <a href="https://github.com/TerrelVerneuil/CozmoProject" target="_blank">Source Code</a>
+    </div>
     <br />
 
     <div id="documentation" style="text-align: center;">
-        <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Materials Needed</h3>
+        <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">
+            Materials Needed</h3>
         <div class="centered-list-container">
             <ul class="centered-list">
                 <li>1x Anki Cozmo Robot</li>
@@ -24,25 +27,26 @@
                 <li>1x Computer with software below</li>
                 <li>1x Micro USB or USB C cable to connect to the computer</li>
             </ul>
-            
+
         </div>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <script>
-    VANTA.NET({
-      el: "#net",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      color: 0xff3b6, // Example: change the primary color (use hexadecimal values)
-      backgroundColor: 0x0B0C10
-    })
+        VANTA.NET({
+            el: "#net",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00,
+            color: 0xff3b6, // Example: change the primary color (use hexadecimal values)
+            backgroundColor: 0x0B0C10
+        })
     </script>
 </body>
+
 </html>
