--- a/documentation.html
+++ b/documentation.html
@@ -27,7 +27,27 @@
                 <li>1x Computer with software below</li>
                 <li>1x Micro USB or USB C cable to connect to the computer</li>
             </ul>
+        </div>
+    </br>
+        <div class="centered-text">
+            <a href="https://www.python.org/downloads/" target="_blank"><button id="rscButton">python </button></a>
+            <button id="rscButton"> Cozmo SDK </button>
+            <a href="https://pypi.org/project/opencv-python/" target="_blank"><button id="rscButton"> OpenCV </button></a>
+            <a href="https://pandas.pydata.org/pandas-docs/stable/getting_started/install.html" target="_blank"><button id="rscButton"> Pandas </button></a>
+            <a href="https://numpy.org/install/" target="_blank"><button id="rscButton"> Numpy </button></a>
 
+        </div>
+        <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Improvements</h3>
+        <div class="centered-list-container">
+            <ul class="centered-list">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Histograms</h3>
+        <div class="centered-list-container">
+         
         </div>
     </div>
 
