--- a/documentation.html
+++ b/documentation.html
@@ -30,7 +30,7 @@
         </div>
     </br>
         <div class="centered-text">
-            <a href="https://www.python.org/downloads/" target="_blank"><button id="rscButton">python </button></a>
+            <a href="https://www.python.org/downloads/" target="_blank"><button id="rscButton">Python </button></a>
             <button id="rscButton"> Cozmo SDK </button>
             <a href="https://pypi.org/project/opencv-python/" target="_blank"><button id="rscButton"> OpenCV </button></a>
             <a href="https://pandas.pydata.org/pandas-docs/stable/getting_started/install.html" target="_blank"><button id="rscButton"> Pandas </button></a>
