--- a/documentation.html
+++ b/documentation.html
@@ -31,7 +31,7 @@
     </br>
         <div class="centered-text">
             <a href="https://www.python.org/downloads/" target="_blank"><button id="rscButton">Python </button></a>
-            <button id="rscButton"> Cozmo SDK </button>
+            <a href="https://github.com/anki/cozmo-python-sdk"><button id="rscButton"> Cozmo SDK </button></a>
             <a href="https://pypi.org/project/opencv-python/" target="_blank"><button id="rscButton"> OpenCV </button></a>
             <a href="https://pandas.pydata.org/pandas-docs/stable/getting_started/install.html" target="_blank"><button id="rscButton"> Pandas </button></a>
             <a href="https://numpy.org/install/" target="_blank"><button id="rscButton"> Numpy </button></a>
