--- a/documentation.html
+++ b/documentation.html
@@ -40,8 +40,8 @@
         <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Improvements</h3>
         <div class="centered-list-container">
             <ul class="centered-list">
-                <li></li>
-                <li></li>
+                <li>Image compression has improved speed of localization from original code by approximately 20s, bringing the average down from 70 seconds to 50 seconds. This is a 28% improvement.</li>
+                <li>Threshold modification has increased certainty from an average of ~40% to an average of ~80%</li>
                 <li></li>
             </ul>
         </div>
