--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@
     <title>Anki Cozmo</title>
 </head>
 
-<body id="net" style="height: 8000px; overflow-y: scroll;">
+<body id="net">
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="documentation.html">Documentation</a>
