--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@
     <title>Anki Cozmo</title>
 </head>
 
-<body id="net" style="height: 150vh; width: 100wh;">
+<body id="net" style="height: fit-content; width: 100wh;">
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="documentation.html">Documentation</a>
