--- a/documentation.html
+++ b/documentation.html
@@ -52,11 +52,11 @@
         <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">How to use Our Code</h3>
         <div class="centered-list-container">
          <ul class="centered-list">
-                <li>First, change the </li>
-                <li>Make sure to install python 3.9, we could not get the code to work with newer versions of python.</li>
-                <li>Download all of the appropriate imports using "pip install...".</li>
-                <li>Connect your phone to the robot using bluetooth.</li>
-                <li>Place a small piece of tape on a flat surface, then place your robot on top of the this tape.</li>
+                <li>First, change the file path in ImageGathering to an appropriate path for you.</li>
+                <li>Then, run ImageGathering. Wait for the robot to complete a 360 rotation. The first picture from this process will be your "home" picture and orientation.</li>
+                <li>Pick up and rotate the robot, place it back down onto the piece of tape to minimize non-rotational movement, which will create unecessary error.</li>
+                <li>Run SlidingWindow to localize the robot, he will face in the home direction and celebrate with a song. At this point you can read the time spent localizing and read the graph. </li>
+                <li>As long as the environment remains reasonably unchanged, you may kidnap the robot as many more times as you'd like.</li>
             </ul>
         </div>
         
