--- a/documentation.html
+++ b/documentation.html
@@ -28,6 +28,8 @@
                 <li>1x Micro USB or USB C cable to connect to the computer</li>
             </ul>
         </div>
+    </div>
+    
     </br>
         <div class="centered-text">
             <a href="https://www.python.org/downloads/" target="_blank"><button id="rscButton">Python </button></a>
@@ -39,7 +41,6 @@
         </div>
         <h3 style="text-align: center; top: 100%; text-decoration: underline;color: black; background-color: #66FCF1">Setup instructions</h3>
         <div class="centered-list-container">
-             <div class="centered-list-container">
             <ul class="centered-list">
                 <li>Download Anki Cozmo App, then power on your robot. Connect the app to the robot using Bluetooth, then connect your phone to your computer using the USB Cable.</li>
                 <li>Make sure to install python 3.9, we could not get the code to work with newer versions of python.</li>
