--- a/documentation.html
+++ b/documentation.html
@@ -29,6 +29,10 @@
             </ul>
         </div>
     </div>
+
+    <style>
+      .centered-text {text-align: center;}
+    </style>
     
     </br>
         <div class="centered-text">
