--- a/documentation.html
+++ b/documentation.html
@@ -92,9 +92,7 @@
             </ul>
         </div>
         
-     <iframe width="420" height="315"
-        src="https://youtu.be/9tojWIA7eFg">
-    </iframe> 
+        <iframe width="700" height="500" src="https://www.youtube.com/embed/9tojWIA7eFg" title="Anki Localization" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
 
